objects/vlocity_ins__PricingElement__c.object
<CustomObject>
    <description>Represents the definition of a price, charge, cost, fee, tax, discount or adjustment such as a monthly recurring charge of $50. Used for integration with rating systems (billing or charging). Used to identify a specific price, charge or adjustment available from the rating system.</description>
    <fields>
        <fullName>vlocity_ins__AdjustmentValue__c</fullName>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationType__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Matrix-Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__CurrencyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayText__c</fullName>
        <label>Display Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey2__c</fullName>
        <description>The globally unique identifier of this Pricing Element. Used to identify the Pricing Element across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Pricing Element identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>DEPRECATED. Use GlobalKey2 instead.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__HelpText__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Moved to Price List Entry.</description>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsReusable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reusable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LoyaltyAmount__c</fullName>
        <label>Loyalty Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LoyaltyCode__c</fullName>
        <label>Loyalty Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__LoyaltyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Element Object Type</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Moved to Price List Entry.</description>
        <label>Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Elements (Offer)</relationshipLabel>
        <relationshipName>OfferPricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PerUsageAmount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>For usage charges. Ex. 19 cents per 1 minute charge. 1 is the per usage amount.</description>
        <label>Usage Per Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PerUsageMeasurementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference to Charge Measurement for usage pricing.</description>
        <label>Usage Unit of Measure</label>
        <referenceTo>vlocity_ins__ChargeMeasurement__c</referenceTo>
        <relationshipLabel>Charge Measurements</relationshipLabel>
        <relationshipName>ChargeMeasurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PerUsageUnitOfMeasure__c</fullName>
        <description>DEPRECATED. Please use PerUsageMeasurementId__c field for usage unit of measure.</description>
        <label>Per Usage Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingMatrixBindingData__c</fullName>
        <label>Pricing Matrix Binding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Matrix</label>
        <referenceTo>vlocity_ins__CalculationMatrix__c</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingVariableAppliesTo__c</fullName>
        <formula>vlocity_ins__PricingVariableId__r.vlocity_ins__AppliesTo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Variable Applies To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingVariableId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_ins__PricingVariable__c</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingVariableType__c</fullName>
        <formula>TEXT(vlocity_ins__PricingVariableId__r.vlocity_ins__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Variable Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Moved to Price List Entry.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Moved to Price List Entry.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleInfo__c</fullName>
        <description>DEPRECATED. Moved to Price List Entry.</description>
        <label>Rule Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_ins__TimePlan__c</referenceTo>
        <relationshipLabel>Pricing Elements</relationshipLabel>
        <relationshipName>PricingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Pricing Element</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>